编译原理实验/proj1/test_files/strings.mjava
9   := < 
dEclarations myid
55alf'
'ab\n\t\\\'cd''

''
abd class
AbD
klse reTurn  claSs
|
voiD  method
